# dotstrings

./: .gitignore  README.md  azure-pipelines.yml  inlinecss.py  pyproject.toml  stylecheck.sh  test.sh
.azure/: azure-pipelines.yml
dotstrings/: __init__.py  dot_strings_entry.py  dot_stringsdict_entry.py  exceptions.py  genstrings.py  localized_bundle.py  localized_string.py  parser.py  parser2.py  string_types.py
tests/: test_bundle.py  test_new.py  test_normalization.py  test_simple.py
tests/quoteless_bundle/en.lproj/: QuotelessKeys.strings
tests/quoteless_bundle/fr.lproj/: QuotelessKeys.strings
tests/string_bundle/en.lproj/: One.strings  Two.strings
tests/string_bundle/fr.lproj/: Two.strings
tests/string_bundle2/fr.lproj/: Three.strings
tests/strings_files/: multi_string_with_comment.strings  randomized.strings  randomized_normalized.strings  single_string.strings  single_string_with_comment.strings  string_with_multiline_value.strings  string_with_uneven_whitespace.strings
tests/stringsdict_files/: example.stringsdict
