[tool.poetry]
name = "dotstrings"
version = "1.1.3"
description = "Tools for dealing with the .strings files for iOS and macOS"

license = "MIT"

authors = [
    "Dale Myers <dalemy@microsoft.com>"
]

readme = 'README.md'

repository = "https://github.com/Microsoft/dotstrings"
homepage = "https://github.com/Microsoft/dotstrings"

keywords = ['localization', 'iOS', 'macOS', 'strings']

classifiers = [
    'Development Status :: 5 - Production/Stable',
    'Environment :: Console',
    'Environment :: MacOS X',
    'Intended Audience :: Developers',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.6',
    'Programming Language :: Python :: 3.7',
    'Topic :: Software Development',
    'Topic :: Utilities'
]

[tool.poetry.dependencies]
python = "^3.7.2"

[tool.poetry.dev-dependencies]
black = "=22.10.0"
mypy = "=0.991"
pylint = "=2.15.6"
pytest = "=7.2.0"
pytest-cov = "=4.0.0"


[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
