[tool.poetry]
name = "dotstrings"
version = "3.1.3"
description = "Tools for dealing with the .strings files for iOS and macOS"

license = "MIT"

authors = ["Dale Myers <dalemyers@microsoft.com>"]

readme = 'README.md'

repository = "https://github.com/Microsoft/dotstrings"
homepage = "https://github.com/Microsoft/dotstrings"

keywords = ['localization', 'iOS', 'macOS', 'strings']

classifiers = [
    'Development Status :: 5 - Production/Stable',
    'Environment :: Console',
    'Environment :: MacOS X',
    'Intended Audience :: Developers',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.8',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
    'Topic :: Software Development',
    'Topic :: Utilities',
]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]
black = "24.4.0"
mypy = "1.9.0"
pylint = "3.1.0"
pytest = "^8.1.0"
pytest-cov = "^5.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
